@@ -248,7 +248,7 @@ SC_TIME_HANDLER
 #	in struct stat.  But we might be able to use fstatfs instead.
 #--------------------------------------------------------------------
 
-AC_STRUCT_ST_BLKSIZE
+AC_CHECK_MEMBERS([struct stat.st_blksize])
 AC_CHECK_FUNC(fstatfs, , [AC_DEFINE(NO_FSTATFS, 1, [Do we have fstatfs()?])])
 
 #--------------------------------------------------------------------
